Dockerize this, and update to SSBU
Remove weird real tier list, update to SSBU, dockerize it.

Basically: Welcome to 2019.

--- a/smash-py.ini
+++ b/smash-py.ini
@@ -4,12 +4,12 @@ module=smash
 callable=app
 master=True
 pidfile=smash-py.pid
-socket=/var/socks/smash-uwsgi.sock
+http=:80
 processes=1
-uid=fastcgi
-gid=nginx
+#uid=fastcgi
+#gid=nginx
 harakiri=40
 max-requests=2000
 vacuum=True
 #home=..
-daemonize=uwsgi.log
+#daemonize=uwsgi.log
