--- a/smash-py.ini
+++ b/smash-py.ini
@@ -4,8 +4,9 @@ module=smash
 callable=app
 master=True
 pidfile=smash-py.pid
-http=:80
+http-socket=:80
 processes=1
+plugin = python3
 #uid=fastcgi
 #gid=nginx
 harakiri=40
