--- a/smash-py.ini
+++ b/smash-py.ini
@@ -1,16 +1,11 @@
 [uwsgi]
+die-on-term=True
 chdir=.
 module=smash
 callable=app
 master=True
-pidfile=smash-py.pid
 http-socket=:80
 processes=1
-plugin = python3
-#uid=fastcgi
-#gid=nginx
 harakiri=40
 max-requests=2000
 vacuum=True
-#home=..
-#daemonize=uwsgi.log
